--- a/accounts/templates/accounts/password_reset/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset/password_reset_complete.html
@@ -1,5 +1,13 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
+{% load static %}
+<div class="mobile-header">
+    <a href="{% url 'accounts:landing' %}">
+        <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+        <div class="logo-text">Endorsity</div>
+        <!-- <span class="mdl-layout-title">Endorsity</span> -->
+    </a>
+</div>
 <div class="container">
     <div class="i-container"><i class="material-icons">done</i></div>
     Your password has been set. You may go ahead and log in now.
@@ -14,7 +22,7 @@
 </div>
 <style>
     .container {
-        background-color: #EEEEEE;
+        background-color: #fff;
         width: 40vw;
         margin-left: 30vw;
         margin-top: 10vh;
@@ -25,12 +33,15 @@
     }
 
     .container .mdl-button {
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
-        font-family: 'Rubik', sans-serif !important;
-        padding-top: 1px !important;
-        text-align: center;
-        margin: auto;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        font-family: 'Montserrat', sans-serif !important;
+        padding: 1vh;
+        height: auto;
+        width: 20vw;
+        border-radius: 15px;
+        font-size: 3vh !important;
+        text-transform: none;
     }
 
     .button-container {
@@ -46,6 +57,53 @@
 
     .i-container i {
         font-size: 4em;
+    }
+
+    .mobile-header {
+        display: none;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .mdl-layout__drawer-button {
+            margin-top: 2.5vh;
+            border-radius: 50%;
+            background-color: #150E41;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            border: 1px solid #fff;
+        }
+
+        .mobile-header {
+            display: block;
+            min-height: 13vh;
+            max-height: 13vh;
+        }
+
+        .mobile-header a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-top: 3vh;
+            text-decoration: none;
+        }
+
+        .logo-img {
+            height: 40px;
+        }
+
+        .logo-text {
+            font-size: 4.5vh;
+            padding-left: 10px;
+            font-family: 'Quicksand', sans-serif;
+            color: #E0E0E0;
+        }
+
+        .container {
+            width: 85%;
+            margin: auto;
+            margin-top: 5vh;
+        }
     }
 </style>
 {% endblock %}
