--- a/accounts/templates/accounts/password_reset/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset/password_reset_confirm.html
@@ -1,5 +1,13 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
+{% load static %}
+<div class="mobile-header">
+    <a href="{% url 'accounts:landing' %}">
+        <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+        <div class="logo-text">Endorsity</div>
+        <!-- <span class="mdl-layout-title">Endorsity</span> -->
+    </a>
+</div>
 {% if validlink %}
 <div class="container">
     <div class="heading">Please enter your new password twice so we can verify you typed it in correctly.</div>
@@ -18,7 +26,7 @@
                     {{ form.new_password2 }}
                 </div>
                 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                    type="submit" value="Change my password" />
+                    type="submit" value="Change My Password" />
             </fieldset>
         </form>
     </div>
@@ -59,13 +67,15 @@
     }
 
     input.mdl-button {
-        background-color: #161A1D !important;
+        background-color: #0471ff !important;
         color: #EEEEEE !important;
-        font-family: 'Rubik', sans-serif !important;
         padding-top: 1px !important;
         text-align: center;
         margin: auto;
         margin-top: 2vh;
+        border-radius: 15px;
+        text-transform: none;
+        font-family: 'Montserrat', sans-serif !important;
     }
 
     .i-container {
@@ -75,6 +85,53 @@
 
     .i-container i {
         font-size: 4em;
+    }
+
+    .mobile-header {
+        display: none;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .mdl-layout__drawer-button {
+            margin-top: 2.5vh;
+            border-radius: 50%;
+            background-color: #150E41;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            border: 1px solid #fff;
+        }
+
+        .mobile-header {
+            display: block;
+            min-height: 13vh;
+            max-height: 13vh;
+        }
+
+        .mobile-header a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-top: 3vh;
+            text-decoration: none;
+        }
+
+        .logo-img {
+            height: 40px;
+        }
+
+        .logo-text {
+            font-size: 4.5vh;
+            padding-left: 10px;
+            font-family: 'Quicksand', sans-serif;
+            color: #E0E0E0;
+        }
+
+        .container {
+            width: 85%;
+            margin: auto;
+            margin-top: 5vh;
+        }
     }
 </style>
 {% endblock %}
