--- a/accounts/templates/accounts/password_reset/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset/password_reset_form.html
@@ -1,5 +1,13 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
+{% load static %}
+<div class="mobile-header">
+    <a href="{% url 'accounts:landing' %}">
+        <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+        <div class="logo-text">Endorsity</div>
+        <!-- <span class="mdl-layout-title">Endorsity</span> -->
+    </a>
+</div>
 <form method="post" class="reset-pass-form">
     <div class="heading">Reset Your Password</div>
     {% csrf_token %}
@@ -21,6 +29,16 @@
 </form>
 <script>
     $('.form-row input').addClass('mdl-textfield__input');
+    const mobJsFn = (mobJs) => {
+        if (mobJs.matches) { // If media query matches
+            $('.h-captcha').attr('data-size', 'compact');
+        } else {
+            $('.h-captcha').attr('data-size', 'normal');
+        }
+    };
+    var mobJs = window.matchMedia("(max-width: 900px)");
+    mobJsFn(mobJs);
+    mobJs.addListener(mobJsFn);
 </script>
 <style>
     form {
@@ -62,6 +80,69 @@
 
     .field-email {
         margin-bottom: 2vh;
+    }
+
+    .mobile-header {
+        display: none;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .mdl-layout__drawer-button {
+            margin-top: 2.5vh;
+            border-radius: 50%;
+            background-color: #150E41;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            border: 1px solid #fff;
+        }
+
+        .mobile-header {
+            display: block;
+            min-height: 13vh;
+            max-height: 13vh;
+        }
+
+        .mobile-header a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-top: 3vh;
+            text-decoration: none;
+        }
+
+        .logo-img {
+            height: 40px;
+        }
+
+        .logo-text {
+            font-size: 4.5vh;
+            padding-left: 10px;
+            font-family: 'Quicksand', sans-serif;
+            color: #E0E0E0;
+        }
+
+        form {
+            width: 80%;
+            margin: auto;
+            margin-top: 5vh;
+            padding: 2vh;
+        }
+
+        .heading {
+            font-size: 3vh;
+            line-height: 4vh;
+        }
+
+        input.mdl-button {
+            width: 100%;
+            font-size: 3vh;
+        }
+
+        .h-captcha {
+            display: flex;
+            justify-content: center;
+        }
     }
 </style>
 {% endblock %}
