--- a/accounts/templates/accounts/influencer_registration.html
+++ b/accounts/templates/accounts/influencer_registration.html
@@ -1,5 +1,13 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
+{% load static %}
+<div class="mobile-header">
+    <a href="{% url 'accounts:landing' %}">
+        <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+        <div class="logo-text">Endorsity</div>
+        <!-- <span class="mdl-layout-title">Endorsity</span> -->
+    </a>
+</div>
 <div class="form-wrapper">
     <div class="heading">Influencer Registration</div>
     <form method="post" class="register-form">
@@ -17,6 +25,16 @@
 <script>
     $('p input').addClass('mdl-textfield__input');
     $('label[for="id_phone_number"]').html('Phone number (10-digit):');
+    const mobJsFn = (mobJs) => {
+        if (mobJs.matches) { // If media query matches
+            $('.h-captcha').attr('data-size', 'compact');
+        } else {
+            $('.h-captcha').attr('data-size', 'normal');
+        }
+    };
+    var mobJs = window.matchMedia("(max-width: 900px)");
+    mobJsFn(mobJs);
+    mobJs.addListener(mobJsFn);
 </script>
 <style>
     .form-wrapper {
@@ -65,6 +83,77 @@
         background-color: #DD2C00;
         border-radius: 5px;
         color: #EEEEEE;
+    }
+
+    .mobile-header {
+        display: none;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .mdl-layout__drawer-button {
+            margin-top: 2.5vh;
+            border-radius: 50%;
+            background-color: #150E41;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            border: 1px solid #fff;
+        }
+
+        .mobile-header {
+            display: block;
+            min-height: 13vh;
+            max-height: 13vh;
+        }
+
+        .mobile-header a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-top: 3vh;
+            text-decoration: none;
+        }
+
+        .logo-img {
+            height: 40px;
+        }
+
+        .logo-text {
+            font-size: 4.5vh;
+            padding-left: 10px;
+            font-family: 'Quicksand', sans-serif;
+            color: #E0E0E0;
+        }
+
+        .heading {
+            font-size: 3vh;
+            line-height: 4vh;
+            padding: 0 2vw;
+            padding-top: 2vh;
+        }
+
+        .form-wrapper {
+            width: 90%;
+            margin: auto;
+            padding: 0;
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+
+        .form-wrapper form {
+            padding: 0 2vw;
+            padding-bottom: 20px;
+        }
+
+        .h-captcha {
+            display: flex;
+            justify-content: center;
+        }
+
+        input.mdl-button {
+            width: 100%;
+            font-size: 3vh;
+        }
     }
 </style>
 {% endblock %}
