--- a/accounts/templates/accounts/password_reset/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset/password_reset_confirm.html
@@ -45,6 +45,7 @@
 {% endif %}
 <script>
     $('input').addClass('mdl-textfield__input');
+    $('input').attr('autocomplete', 'off');
 </script>
 <style>
     .container {
