--- a/accounts/templates/accounts/password_reset/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset/password_reset_form.html
@@ -29,6 +29,7 @@
 </form>
 <script>
     $('.form-row input').addClass('mdl-textfield__input');
+    $('input').attr('autocomplete', 'off');
     const mobJsFn = (mobJs) => {
         if (mobJs.matches) { // If media query matches
             $('.h-captcha').attr('data-size', 'compact');
