--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -240,6 +240,12 @@
             padding-bottom: 4vh;
             font-family: 'Montserrat', sans-serif;
         }
+
+        @media only screen and (max-width: 900px) {
+            .mdl-layout__drawer.is-visible {
+                width: 75vw;
+            }
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
