--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -120,6 +120,7 @@
 </div>
 <script>
     $('input').addClass('mdl-textfield__input');
+    $('input').attr('autocomplete', 'off');
 </script>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700%2C500&display=swap');
